feat: add image /describe api
